# cmakelists

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  good_morning.cpp  hello.cpp
test/: CMakeLists.txt  main.cpp
